Fix Cosmetic Issues
This fixes the following problems:

- Icons and text in publications popup are not aligned vertically
- UI flickers while loading publications in event details modal
- Missing test data for PUBLICATION.CHANNLES list provider
- Description text of publication being wrapped too narrow

--- a/modules/admin-ui/src/main/webapp/styles/components/_popover.scss
+++ b/modules/admin-ui/src/main/webapp/styles/components/_popover.scss
@@ -76,6 +76,7 @@
 
 .popover__list-item {
     @include retina-image("#{$img-path}play-icon-on", 20px 20px);
+    background-position-y: center;
     margin: 6px 0;
     padding-left: 30px;
     line-height: 22px;
