--- a/modules/admin-ui/src/main/webapp/styles/views/modals/_lists.scss
+++ b/modules/admin-ui/src/main/webapp/styles/views/modals/_lists.scss
@@ -39,8 +39,10 @@
             color: $medium-prim-color;
         }
 
-        .max-width {
-            width: 95%;
+        .description {
+            width: 100%;
+            padding-right: 20px;
+            line-height: 15px;
         }
 
         > ul li {
